app/assets/stylesheets/components/chartsTable.scss
$charts-table-border: solid 3px $color-grey-background;

.chartsTable {
  text-align: left;
  border-collapse: collapse;
  width: 100%;
}

.chartsTable.mod-bottom-border {
  border-bottom: $charts-table-border;
}

.chartsTable.mod-no-column-lines {
  .chartsTable-cell {
    border-right: 0;
  }
}

  .chartsTable-row.is-hidden {
    display: none;
  }

  // Cannot give bottom border to row, so workaround is to target cells of
  // in all rows except the last
  .chartsTable-row .chartsTable-cell {
    border-bottom: $charts-table-border;
  }

  .chartsTable-body .chartsTable-row:last-child .chartsTable-cell {
    border-bottom: 0;
  }

  .chartsTable-cell {
    padding: 10px;
    word-break: break-word;
    word-wrap: break-word;

    @media (min-width: 600px) {
      min-width: 100px;
    }

    .meterGauge.mod-small {
      padding: 0px 12.5px;
    }
  }

  .chartsTable-cell:not(:last-child) {
    border-right: $charts-table-border;
  }

  .chartsTable-cell.mod-head {
    height: 100%;
    font-weight: 600;
    color: black;
    padding: 10px;
    word-wrap: normal;
    word-break: normal;
  }

  .chartsTable-cell.mod-first-column {
    padding-left: $padding-main-content;
  }

  .chartsTable-cell.mod-important-text {
    font-size: 1.6rem;

    @media (min-width: 400px) {
      font-size: 1.8rem;
    }
  }

  .chartsTable-cell.mod-reform-name {
    min-width: 200px;
  }



  .chartsTable-cell.mod-summary {
    width: 100%;
  }

    .chartsTable-cell-link {
      color: $color-brand;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }

    .chartsTable-cell-text {
      margin: 0;
      font-weight: 600;
    }

      .chartsTable-cell-text-score {
        vertical-align: middle;
      }

      .chartsTable-cell-text-changeIcon {
        display: inline-block;
        width: 1.5rem;
        height: 1.5rem;
        vertical-align: middle;
      }

  .highcharts-container {
    width: 100%;
    height: 100%;
  }

.chartsTable.mod-verdict {

  .chartsTable-cell.mod-summary {
    display: none;

    @media (min-width: 500px) {
      display: table-cell;
    }
  }

}

.chartsTable.mod-reforms {

  .chartsTable-cell.mod-summary {
    display: none;

    @media (min-width: 840px) {
      display: table-cell;
    }
  }

    .chartsTable-cell-chart {
      display: none;

      @media (min-width: 680px) {
        display: block;
      }
    }

    .chartsTable-cell-text {
      @media (min-width: 680px) {
        display: none;
      }
    }
}

$width-homepage-charts-table-show-charts: 410px;

.chartsTable.mod-homepage {

  // Decrease font size of first column text on home page Georgian
  // charts table so that long reform names (which don't wrap
  // in Firefox) don't push the other columns out of the viewport
  .chartsTable-cell.mod-first-column:not(.mod-head):lang(ka) {
    font-size: 1.4rem;
  }

  .chartsTable-cell:not(.mod-first-column) {
    text-align: center;

    @media (min-width: $width-homepage-charts-table-show-charts) {
      padding-left: 0;
      padding-right: 0;
    }
  }

  .chartsTable-row {
    padding: 0 $padding-main-content;
  }

  .chartsTable-cell-chart {
    display: none;

    @media (min-width: $width-homepage-charts-table-show-charts) {
      display: block;
    }
  }

  .chartsTable-cell-text {
    @media (min-width: $width-homepage-charts-table-show-charts) {
      display: none;
    }
  }

}


// Crazy hack section! Gives a min width to the first column of the reforms
// page chart table and the review board page chart table so that the
// first column aligns with the first tablist.

.chartsTable.mod-reforms, .chartsTable.mod-verdict {
  :lang(en) .chartsTable-cell.mod-first-column {
    box-sizing: border-box;
    min-width: 95.16px;

    @media (min-width: $widthForTablistFontIncrease1) {
      min-width: 122.4px;
    }

    @media (min-width: $widthForTablistFontIncrease2) {
      min-width: 143.5px;
    }
  }

  :lang(ka) .chartsTable-cell.mod-first-column {
    box-sizing: border-box;

    @media (min-width: $widthForTablistFontIncrease1) {

    }

    @media (min-width: $widthForTablistFontIncrease2) {
      min-width: 158px;
    }
  }
}

